--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p><strong>Address:</strong> Head Office, The Polish Aura, Vijana Street, Dar es Salaam</p>
             <p><strong>Phone:</strong> +255740400972</p>
             <p><strong>Email:</strong> thepolishaura@gmail.com</p>
-            <p><strong>Operating Hours:</strong> Our operational hours are Monday through saturday, from 8:00 AM to 7:00 PM. On Sunday, from 12:00 PM to 6:00 PM.</p>
+            <p><strong>Operating Hours:</strong> Our operational hours are Monday through sunday, from 8:30 AM to 10:00 PM. </p>
           </div>
         </div>
 
@@ -257,3 +257,4 @@ setInterval(nextSlide, 3000);
 </script>
 </body>
 </html>
+
